# InoIPC

./: CLAUDE.md  README.ko.md  README.md
csharp/src/Transport/Tcp/: TcpServer.cs
csharp/test/: TEST_IpcResponse.cs
rust/: Cargo.toml
rust/inoipc/: Cargo.toml
rust/inoipc/src/: error.rs  frame_protocol.rs  ipc_connection.rs  ipc_response.rs  lib.rs
rust/inoipc/src/transport/: mod.rs  named_pipe.rs  tcp.rs  test.rs  uds.rs
rust/inoipc/tests/: test_frame_protocol.rs  test_ipc_connection.rs  test_ipc_response.rs
src/InoIPC/Transport/NamedPipe/: NamedPipeServer.cs
src/Transport/: IServer.cs
src/Transport/NamedPipe/: NamedPipeServer.cs
src/Transport/Test/: TestServer.cs
src/Transport/Uds/: UdsServer.cs
test/: InoIPC.TEST.csproj  TEST_FrameProtocol.cs  TEST_IpcConnection.cs
