[package]
name = "inoipc"
version = "0.1.0"
edition = "2024"
description = "Length-prefixed IPC framework — TCP, Named Pipe, UDS, JSON messaging"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
] }

[dev-dependencies]
